# orderbook-websocket

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
src/orderbook_websocket/: __init__.py  __main__.py  book.py  cli.py  metrics.py  reconnect.py  snapshot.py  validator.py
tests/unit/: test_book.py  test_cli.py  test_metrics.py  test_reconnect.py  test_snapshot.py  test_validator.py
