[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orderbook-websocket"
version = "0.1.0"
description = "Live order book client with L2 snapshot + delta application — by Viprasol Tech."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
  "orderbook",
  "order-book",
  "websocket",
  "crypto",
  "market-data",
  "python",
  "trading",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["pydantic>=2.6", "typer>=0.12", "rich>=13.7"]

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
orderbook-websocket = "orderbook_websocket.cli:app"

[project.urls]
Homepage = "https://viprasol.com"
Repository = "https://github.com/Viprasol-Tech/orderbook-websocket"
Issues = "https://github.com/Viprasol-Tech/orderbook-websocket/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orderbook_websocket"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "C4"]
ignore = ["B008", "B027", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
